@@ -269,6 +269,19 @@ FL_EXPORT void fl_replace_xyplot_point(
 		double y
 		);
 
+/* Replace the value of a particular point in dataset setID, 
+ * where setID=0 is the first data set.
+ * This routine is an extension of fl_replace_xyplot_point
+ * which acts on the first dataset only.
+ */
+FL_EXPORT void fl_replace_xyplot_point_in_overlay(
+		FL_OBJECT * ob,
+		int i,
+		int setID,
+		double x,
+		double y
+		);
+
 FL_EXPORT void fl_get_xyplot_xmapping(
 		FL_OBJECT *ob,
 		float *a,
