@@ -1,3 +1,10 @@
+2004-05-13  Reed Riddle  <drriddle@mac.com>
+
+	* lib/xyplot.c:
+	* lib/include/xyplot.h (fl_replace_xyplot_point_in_overlay):
+	new function, generalizing the existing fl_replace_xyplot_point
+	which acts only on the first dataset.
+
 2004-05-12  Jean-Marc Lasgouttes  <lasgouttes@lyx.org>
 
 	* gl/Makefile.am (INCLUDES): 
